# lbfgsb-gpu

./: .gitignore  CMakeLists.txt  README.md
cmake/: CmakeCommon.cmake
culbfgsb/: CMakeLists.txt  active.cu  ap.cpp  ap.h  apvt.h  bmv.cu  cauchy.cu  cmprlb.cu  culbfgsb.h  cutil_inline.h  dpofa.cu  formk.cu  formt.cu  freev.cu  lbfgsb.cpp  lbfgsbcpu.cpp  lbfgsbcpu.h  lbfgsbcuda.cpp  lbfgsbcuda.h  lnsrlb.cu  matupd.cu  minimize.cu  projgr.cu  subsm.cu
examples/: CMakeLists.txt
examples/dsscfg/: CMakeLists.txt  dsscfg_cpu.cpp  dsscfg_cpu.h  dsscfg_cuda.cu  dsscfg_cuda.h  dsscfg_main.cpp
general/: FP_ComputeEnergy.cg  FP_DrawNewSites.cg  FP_DrawSites.cg  FP_DrawSitesOQ.cg  FP_Flood.cg  FP_Scatter.cg  VP_ComputeEnergyCentroid.cg  VP_Deduction.cg  VP_Flood.cg  VP_Scatter.cg  resource.h  voronoi.cpp  voronoi.cu  voronoi.vcxproj  voronoi.vcxproj.filters
general/L-BFGS/: active.cu  bmv.cu  cauchy.cu  cmprlb.cu  cutil_inline.h  dpofa.cu  formk.cu  freev.cu  lbfgsb.cpp  lbfgsb.h  lbfgsbcuda.h  lnsrlb.cu  matupd.cu  minimize.cu  subsm.cu
voronoi/: FP_ComputeEnergyCentroid.cg  FP_Deduction.cg  FP_FinalRender.cg  FP_ScatterCentroid.cg  VP_DrawNewSites.cg  VP_DrawSites.cg  VP_DrawSitesOQ.cg  VP_ScatterCentroid.cg  voronoi.cpp  voronoi.h  voronoi.opensdf  voronoi.rc  voronoi.sln  voronoi.vcproj  voronoi.vcxproj  voronoi.vcxproj.filters
voronoi/L-BFGS/: active.cu  ap.cpp  ap.h  apvt.h  bmv.cu  cauchy.cu  cmprlb.cu  formk.cu  formt.cu  lbfgsb.cpp  lbfgsbcuda.h  lnsrlb.cu  matupd.cu  projgr.cu  subsm.cu
